# SaperProject

./: CMakeList.txt  CMakeLists.txt  README.md  Saper.cpp  project.cpp  remagiend.cpp
Source/: src.cpp  src.h  test.cpp
material/: difficulties.txt
test/: cheking.cpp  test.cpp
